# uacos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  UACOS_AUTO_START.py  pyproject.toml
docs/: AGENT_COMPARISON_MATRIX.md  AUTOPILOT_MODE.md  AUTO_MODE.md  CASE_STUDY_TEMPLATE.md  CLAIM_WORDING_GUIDE.md  CONTEXT_INTELLIGENCE.md  CURRENT_STATUS.md  DOCS_CLEANUP_REPORT.md  DOCUMENTATION_INDEX.md  EXTERNAL_AGENT_INTEGRATION.md  INSTALLATION.md  KNOWN_ISSUES.md  LANGUAGE_POLICY.md  MASTER_DOCUMENTATION.md  MCP_SERVER.md  MCP_SETUP.md  ONBOARDING.md  PATCH_LIFECYCLE.md  PERFORMANCE_MEASUREMENT.md  PHASE_HISTORY.md  PRODUCTION_10_10_SCORECARD.md  PRODUCTION_IMPROVEMENT_CHECKLIST.md  PRODUCT_WORKFLOWS.md  PUBLIC_BENCHMARK_REPORT_TEMPLATE.md  README.md  RELEASE_AND_USAGE_HISTORY.md  RELEASE_CHECKLIST.md  SECURITY_MODEL.md  SPRINT_ROADMAP_V4_TO_BETA.md  STRATEGIC_STATUS.md  TEST_EVIDENCE_HISTORY.md  TROUBLESHOOTING.md  USER_GUIDE.md  WORKFLOW_RECIPES.md  _config.yml  index.md
evals/: benchmark_suite.json  golden_tasks.json  multi_repo_benchmark.example.json
scripts/: build_clean_release.py  check_english_docs.py  community_readiness_check.py  e2e_v2_user_workflow.py  eval_run.py  install_smoke_test.sh  release_gate.py  run_phase29_tests.py  run_phase30_validation.py  run_phase31_validation.py  run_phase32_validation.py  run_phase33_validation.py  run_phase34_validation.py  smoke_phase10.py  smoke_phase11.py  smoke_phase12.py  smoke_phase13.py  smoke_phase14.py  smoke_phase16.py  smoke_phase17.py  smoke_phase18.py  smoke_phase19.py  (+21 more)
(+142 files in other folders)
